Objective4/3. PromGrafana-clustip.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana-svc
spec:
  ports:
  - port: 3000
  selector:
    app: grafana
