Objective4/3. PromGrafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpapache-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: grafana.netdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
